--- a/src/components/layouts/Footer.module.css
+++ b/src/components/layouts/Footer.module.css
@@ -1,21 +1,17 @@
 
+
 .fallowsSection a .ti{
   color: white;
-  font-size: 3em;
+  font-size: 2em;
   cursor: pointer;
 }
 .fallowsSection a .tiktok{
   color: white;
-  font-size: 2em;
+  font-size: 1.5em;
   margin-left: 0.2em ;
   margin-right: 0.2em ;
 }
 
-.fallowsSection a[href^="mailto:"] .ti{
-  font-size: 2.5em;
-}
-
-.fallowsSection .fallowsSectionTitle{
-  font-size: 1em;
-  color: white;
-}
+/*.fallowsSection a[href^="mailto:"] .ti{
+  font-size: 2em;
+}*/
